<resources>
    <string name="app_name">My_Grades</string>
    <string name="action_settings">Settings</string>
    <string name="options_exit_text">Exit</string>
    <string name="course_input_text_prompt">/@StringEnter Course Name:</string>
    <string name="input_course_save_button_text"><![CDATA[Save/> </LinearLayout> </LinearLayout>]]></string>
    <string name="title_activity_course_information_input">course_information_input</string>
    <string name="title_activity_input_course_information">input_course_information</string>
    <string name="enter_course_name_text_prompt">Enter Course Name:</string>
    <string name="enter_course_name_editable_text">Enter Course Name</string>
    <string name="gpa_ellipses_course_input">...</string>
    <string name="is_major_check_box">Major:</string>
    <string name="is_major_checkbox">Part of Major</string>
    <string name="title_activity_gpa_information_display">gpa_information_display</string>
    <string name="title_activity_grade_information_input">grade_information_input</string>
    <string name="title_activity_all_activites_nav_drawer">all_activites_nav_drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="course_name_edit_text">Credit Hours</string>
    <string name="course_name_input_edit_text">Current Course</string>
    <string name="grid_display_cname_header">Course Name</string>
    <string name="gdisplay_chours_header">Credit Hours</string>
    <string name="gdisplay_cmajor_header">Major Course</string>
    <string name="gdisp_edit_header">Edit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
